<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="co.pralogy.mfa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="co.pralogy.mfa.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="co.pralogy.mfa.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/fragment_account"
        android:name="co.pralogy.mfa.fragment_account"
        android:label="fragment_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/fragment_applications"
        android:name="co.pralogy.mfa.fragment_applications"
        android:label="fragment_applications"
        tools:layout="@layout/fragment_applications" />
    <fragment
        android:id="@+id/fragment_configuration"
        android:name="co.pralogy.mfa.fragment_configuration"
        android:label="fragment_configuration"
        tools:layout="@layout/fragment_configuration" />
    <fragment
        android:id="@+id/fragment_logout"
        android:name="co.pralogy.mfa.fragment_logout"
        android:label="fragment_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/fragment_profile"
        android:name="co.pralogy.mfa.fragment_profile"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="co.pralogy.mfa.ui.history.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" />
</navigation>